--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/polyfill": "^7.12.1",
     "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
